assets/css/style.css
/* #region Common */
:root
{
  --bz-dark-gray: #b1b1b1;
  --bz-gray: #d9dbd5;
  --bz-gray-light: #eaebeb;
  --bz-gray-ligther: #fbfbfa;
  --bz-white: white;
  --bz-sand: #f3eeea;
  --bz-dark: #000;
  --bz-sky: #8fdafd;
  --bz-dark-green: #019689;
  --bz-green: #d5f9ba;
}

*
{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body
{
  background-image: linear-gradient(to bottom, var(--bz-dark-green) 0, var(--bz-dark-green) 140px, var(--bz-gray) 140px, var(--bz-gray) 100%);
  overflow: hidden;
}

#app
{
  height: 100vh;
}

.wrapper
{
  display: flex;
  flex-wrap: wrap;
  max-width: 1200px;
  margin: 2rem auto;
  height: calc(100% - 4rem);

  & .left,
  & .right
  {
    height: 100%;
  }

  & .left
  {
    flex-grow: 1;
  }

  & .right
  {
    flex-grow: 3;
    display: flex;
    flex-direction: column;
  }

}
/* #endregion common */

/* #region debug */
.debug .left
{
  background-color: blanchedalmond;
}

.debug .right
{
  background-color: aqua;
}

/*  #endregion debug */

/* #region left */
.left > .user
{
  background-color: var(--bz-gray-light);
  padding: 1rem;
}

.left > .notifications
{
  background-color: var(--bz-sky);
  padding: 1rem;
}

.left > .searcharea
{
  background-color: var(--bz-gray-ligther);
  padding: 1rem;
}

.contacts
{
  overflow-y: scroll;
  height: calc(100% - 220px);
}

.contact
{
  display: flex;
  align-items: flex-start;
  column-gap: 1rem;
  padding: 0.5rem;
  background-color: var(--bz-white);
  border: 1px solid var(--bz-gray-light);
  cursor: pointer;
}

.contact.active
{
  background-color: var(--bz-gray-light);
}

.avatar img
{
  width: 60px;
  border-radius: 50%;
}

.contact .text
{
  padding-top: 0.25rem;
}

.user
{
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.user .actions
{
  color: var(--bz-dark-gray);
}

.user .actions i
{
  padding: 1rem;
}

.notifications
{
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.notifications .bell
{
  width: 60px;
  aspect-ratio: 1/1;
  border-radius: 50%;
  background-color: var(--bz-white);
  color: #8fdafd;
  display: flex;
  align-items: center;
  justify-content: center;
}

.me
{
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

/* #endregion left */

/* #region Right */

.messages
{
  background-image: url('../img/mine.jpg');
  width: 100%;
  flex-grow: 1;

}

.active_contact
{
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--bz-gray-light);
  border-left: 1px solid var(--bz-dark-gray);
}

.active_contact .actions
{
  color: var(--bz-dark-gray)
}

.contact_details
{
  display: flex;
  align-items: center;
  padding: 1rem;
}

.toolbar
{
  padding: 1rem;
  background-color: var(--bz-sand);
  display: flex;
  justify-content: space-around;
}

.toolbar input
{
  flex-grow: 1;
}

.toolbar .emoji,
.toolbar .mic
{
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.5rem;
}

/* #endregion right */

/* #region Messages section */

.messages
{
  display: flex;
  flex-direction: column;
}

.received,
.sent
{
  padding: 0.5rem;
  border-radius: 0.5rem;
  margin: 0.5rem;
  max-width: 200px;
}

.received
{
  align-self: flex-start;
  background-color: var(--bz-white);
}

.sent
{
  align-self: flex-end;
  background-color: var(--bz-green);

}


/* #endregion Messages section */



/*Aggiunte al layout di base*/

.d-flex{
  display: flex;
}

.w-100{
  width: 100%;
}

#orario{
  border:  2px solid red;
  text-align: end;
  border-radius: 100%;
  padding: 5px 2px 5px 2px;
}

#ultimoMessaggio{
  border:  2px solid blue;
  margin-top: 15px;
}

.contact{
  border: 2px solid grey;
}

.searcharea{
  margin-left: -16px;
}

.p-xy{
  padding: 5px;
}

